<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.detail.LoanDetailFragment">

    <TextView
        android:id="@+id/tvLoanId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_id"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvReturnDatePh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/return_date_placeholder2"
        app:layout_constraintStart_toStartOf="@+id/tvLoanId"
        app:layout_constraintTop_toBottomOf="@+id/tvLoanId" />

    <TextView
        android:id="@+id/tvReturnDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvReturnDatePh"
        app:layout_constraintStart_toEndOf="@+id/tvReturnDatePh"
        app:layout_constraintTop_toTopOf="@+id/tvReturnDatePh" />

    <TextView
        android:id="@+id/tvDueDatePh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/due_date"
        app:layout_constraintStart_toStartOf="@+id/tvReturnDatePh"
        app:layout_constraintTop_toBottomOf="@+id/tvReturnDatePh" />

    <TextView
        android:id="@+id/tvDueDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_date"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvDueDatePh"
        app:layout_constraintStart_toEndOf="@+id/tvDueDatePh"
        app:layout_constraintTop_toTopOf="@+id/tvDueDatePh" />

    <TextView
        android:id="@+id/tvFinePh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fine"
        app:layout_constraintStart_toStartOf="@+id/tvDueDatePh"
        app:layout_constraintTop_toBottomOf="@+id/tvDueDatePh" />

    <TextView
        android:id="@+id/tvFineValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_fine"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvFinePh"
        app:layout_constraintStart_toEndOf="@+id/tvFinePh"
        app:layout_constraintTop_toTopOf="@+id/tvFinePh" />

    <TextView
        android:id="@+id/tvBookList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/borrowed_books"
        app:layout_constraintStart_toStartOf="@+id/tvFinePh"
        app:layout_constraintTop_toBottomOf="@+id/tvFinePh" />

    <TextView
        android:id="@+id/tvLoanStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/loan_status"
        android:textColor="@color/danger"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvFinePh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnExtend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/extend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBorrowedBooks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        tools:listitem="@layout/item_borrowed_book"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnReturn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBookList" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReturn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/return_btn"
        android:textColor="@color/danger"
        app:rippleColor="@color/danger2"
        app:strokeColor="@color/danger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="206dp" />

</androidx.constraintlayout.widget.ConstraintLayout>