<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvActiveLoan"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cvTvLoanId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/transaction_id"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cvTvBookListPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/book_list_placeholder"
            app:layout_constraintStart_toStartOf="@+id/cvTvLoanId"
            app:layout_constraintTop_toBottomOf="@+id/cvTvLoanId" />

        <TextView
            android:id="@+id/cvTvReturnDatePh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/return_date_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cvTvBookListPrev"
            app:layout_constraintTop_toBottomOf="@+id/cvTvBookListPrev" />

        <TextView
            android:id="@+id/cvTvReturnDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/example_date"
            android:textColor="@color/danger2"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cvTvReturnDatePh"
            app:layout_constraintStart_toEndOf="@+id/cvTvReturnDatePh"
            app:layout_constraintTop_toTopOf="@+id/cvTvReturnDatePh" />

        <TextView
            android:id="@+id/cvTvDaysLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/example_day_left"
            android:textColor="@color/danger"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>