<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.AccountFragment">

    <include
        android:id="@+id/include"
        layout="@layout/card_membership"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/lnBtnSets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:justifyContent="space_around"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardIbBlock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibBlock"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_image_button"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_block" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/block_card" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardIbHistory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/ibTapHistory"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/bg_image_button"
                    android:padding="8dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_card" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tap_history" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </com.google.android.flexbox.FlexboxLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/logout"
        android:textColor="@color/danger"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/danger2"
        app:strokeColor="@color/danger" />

</androidx.constraintlayout.widget.ConstraintLayout>